opam-version: "2.0"
version: "0.1"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "LSP server for SMTLIB2"
author: "Simon Cruanes"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" { >= "1.1" }
  "smtlib-utils" { = version }
  "lsp"
  "ocaml" { >= "4.03.0" }
]
tags: [ "SMTLIB" "smt2" "lsp" "logic" ]
homepage: "https://github.com/c-cube/smtlib-utils/"
bug-reports: "https://github.com/c-cube/smtlib-utils/issues"
dev-repo: "git+https://github.com/c-cube/smtlib-utils.git"

